@@ -1,3 +1,8 @@
+2009-05-21  Frank Lanitz  <frank@Kafka>
+
+ * Added configuration dialog.
+
+
 2009-05-19  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>
 
  * Make toolbar document sensitive.
